k8s/my-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-postgres-svc
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: my-postgres
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-postgres-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: my-postgres.k8s.beta.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-postgres-svc
            port:
              number: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-postgres
spec:
  selector:
    matchLabels:
      app: my-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-postgres
    spec:
      containers:
        - image: postgres:16.6-alpine
          name: my-postgres
          ports:
            - containerPort: 5432
              name: my-postgres
          volumeMounts:
            - name: postgres-persistent-storage
              mountPath: /var/lib/postgresql/data/pgdata
            - name: initialize-db-vol
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
      volumes:
        - name: initialize-db-vol
          configMap:
            name: my-postgres-init
            items:
              - key: init-pg.sql
                path: init-pg.sql
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: my-pv-claim
